# neuralese

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/neuralese/: __init__.py  config.py  conversations_data.py  evaluate.py  file_utils.py  generate.py  generate_activations.py  run_experiment.py  train.py  translator.py  visualize.py
src/neuralese/data/: conversations_data.py  data_utils.py  get_data.py  text_data.py
src/neuralese/explaination_prediction/: config.py  explanation_dataset.py  explanations_data.py  load_sae_weight_vectors.py  parse_explanations.py  supervised_train.py
src/neuralese/loss_fns/: __init__.py  distill_orig_logits.py  neuralese_dot_prod.py  neuralese_mse.py  neuralese_to_orig_logit.py
src/neuralese/next_act_prediction/: config.py  evaluate.py  generate.py  train.py  translator.py
src/neuralese/next_act_prediction/data/: conversations_data.py  data_utils.py  get_data.py  text_data.py
src/neuralese/next_act_prediction/loss_fns/: __init__.py  distill_orig_logits.py  neuralese_dot_prod.py  neuralese_mse.py  neuralese_to_orig_logit.py
src/neuralese/sonar/: text_embed.py
